--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -7,7 +7,7 @@
 
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Personal website of fullstack developer"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 
